fix: Recalculate the heigt to avoid double scrollbars. quiqqer/order#90

--- a/bin/frontend/controls/orderProcess/Window.css
+++ b/bin/frontend/controls/orderProcess/Window.css
@@ -14,7 +14,7 @@
 
 .quiqqer-order-window-header-text {
     float: left;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 30px;
     width: calc(100% - 40px);
 }
